--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed",
+    "postinstall": "prisma generate"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed-admin.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
@@ -27,7 +35,9 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "postcss": "^8.4.49",
+    "prisma": "^6.19.1",
     "tailwindcss": "^3.4.14",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
