--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
