--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "seed": "tsx prisma/seed-admin.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.1",
+    "@prisma/client": "6.19.1",
     "@radix-ui/react-slot": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -36,9 +36,12 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "postcss": "^8.4.49",
-    "prisma": "^6.19.1",
+    "prisma": "6.19.1",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.21.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
